[ADD] appointments swagger documentation
