# cmd/server/handler/appointments.go
@@ -36,6 +36,24 @@ func NewAppointmentsHandler(getter AppointmentsGetter, creator AppointmentCreato
 	}
 }
 
+// GetAppointmentByID godoc
+// @Summary      Gets an Appointment by id
+// @Description  Gets an Appointment by id using the repository principal
+// @Tags         Appointment
+// @Produce      application/json
+// @Param        PUBLIC-KEY header string true "publicKey"
+// @Param        SECRET_KEY header string true "secretKey"
+// @Param        id path string true "ID"
+// @Success      200 {object} appointments.Appointment
+// @Responses:
+//
+//	200: {object} appointments.Appointment (updated)
+//	400: The id passed is in the wrong format
+//	401: Either The PUBLIC-KEY or the SECRET-KEY or both are not correct
+//	404: The patient with the given id was not found
+//	500: Internal error occured
+//
+// @Router       /appointments/{id} [get]
 func (ah *AppointmentsHandler) GetAppointmentByID(ctx *gin.Context) {
 	idParam := ctx.Param("id")
 	id, err := strconv.Atoi(idParam)
@@ -51,10 +69,27 @@ func (ah *AppointmentsHandler) GetAppointmentByID(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, appointment)
 }
 
+// GetAppointmentByDNI godoc
+// @Summary      Gets all appointments by dni
+// @Description  Gets all appointments if any by patient dni
+// @Tags         Appointment
+// @Produce      application/json
+// @Param        PUBLIC-KEY header string true "publicKey"
+// @Param        SECRET_KEY header string true "secretKey"
+// @Param        DNI path string true "DNI"
+// @Success      200 {object} appointments.Appointment
+// @Responses:
+//
+//	200: {object} appointments.Appointment (updated)
+//	400: The id passed is in the wrong format
+//	401: Either The PUBLIC-KEY or the SECRET-KEY or both are not correct
+//	404: The patient with the given dni was not found
+//	500: Internal error occured
+//
+// @Router       /appointments/{id} [get]
 func (ah *AppointmentsHandler) GetAppointmentByDni(ctx *gin.Context) {
 	dni := ctx.Query("dni")
 
-	
 	if dni == "" {
 		ctx.JSON(http.StatusBadRequest, gin.H{"error": "invalid dni"})
 		return
@@ -68,6 +103,24 @@ func (ah *AppointmentsHandler) GetAppointmentByDni(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, appointments)
 }
 
+// CreateAppointment godoc
+// @Summary      Creates an Appointment
+// @Description  Creates an Appointment, you must send the fields required to process your request Patient, Dentist, Date, Description
+// @Tags         Appointment
+// @Produce      application/json
+// @Param        PUBLIC-KEY header string true "publicKey"
+// @Param        SECRET_KEY header string true "secretKey"
+// @Param        Appointment body appointments.Appointment true "Create Appointment"
+// @Success      200 {object} appointments.Appointment
+// @Responses:
+//
+//	200: {object} appointments.Appointment
+//	401: Either The PUBLIC-KEY or the SECRET-KEY or both are not correct
+//	400: Either the request wasn't valid or all of the required fields weren't sent
+//	404: Either the dentist or the patient were not found
+//	500: Internal error occured
+//
+// @Router       /appointments [post]
 func (ah *AppointmentsHandler) CreateAppointment(ctx *gin.Context) {
 	appointmentRequest := appointments.Appointment{}
 	err := ctx.BindJSON(&appointmentRequest)
@@ -79,8 +132,8 @@ func (ah *AppointmentsHandler) CreateAppointment(ctx *gin.Context) {
 		appointmentRequest.Description == "" ||
 		appointmentRequest.Patient.Dni == "" ||
 		appointmentRequest.Dentist.License == "" {
-		
-			ctx.JSON(http.StatusBadRequest, gin.H{"error": "appointment field missing, check sent JSON"})
+
+		ctx.JSON(http.StatusBadRequest, gin.H{"error": "appointment field missing, check sent JSON"})
 		return
 	}
 
@@ -92,6 +145,25 @@ func (ah *AppointmentsHandler) CreateAppointment(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, appointment)
 }
 
+// UpdateAppointmentByID godoc
+// @Summary      Updates an Appointment by id
+// @Description  Updates an Appointment by id, you must send all of the appointment fields to process your request
+// @Tags         Appointment
+// @Produce      application/json
+// @Param        PUBLIC-KEY header string true "publicKey"
+// @Param        SECRET_KEY header string true "secretKey"
+// @Param        id path string true "ID"
+// @Param        Appointment body appointments.Appointment true "Update Appointment"
+// @Success      200 {object} appointments.Appointment
+// @Responses:
+//
+//	200: {object} appointments.Appointment (updated)
+//	400: Either the id passed is in the wrong format or there are missing fields
+//	401: Either The PUBLIC-KEY or the SECRET-KEY or both are not correct
+//	404: The appointment with the given id was not found
+//	500: Internal error occurred
+//
+// @Router       /appointments/{id} [put]
 func (ah *AppointmentsHandler) FullUpdateAppointmentByID(ctx *gin.Context) {
 	idParam := ctx.Param("id")
 	id, err := strconv.Atoi(idParam)
@@ -124,6 +196,25 @@ func (ah *AppointmentsHandler) FullUpdateAppointmentByID(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, appointment)
 }
 
+// UpdateAppointmentByID godoc
+// @Summary      Updates an Appointment by id
+// @Description  Updates an Appointment by id, you can send only the appointment fields you need to change
+// @Tags         Appointment
+// @Produce      application/json
+// @Param        PUBLIC-KEY header string true "publicKey"
+// @Param        SECRET_KEY header string true "secretKey"
+// @Param        id path string true "ID"
+// @Param        Appointment body appointments.Appointment true "Update Appointment"
+// @Success      200 {object} appointments.Appointment
+// @Responses:
+//
+//	200: {object} appointments.Appointment (updated)
+//	400: Either the id passed is in the wrong format or there are missing fields
+//	401: Either The PUBLIC-KEY or the SECRET-KEY or both are not correct
+//	404: The appointment with the given id was not found
+//	500: Internal error occurred
+//
+// @Router       /appointments/{id} [patch]
 func (ah *AppointmentsHandler) UpdateAppointmentByID(ctx *gin.Context) {
 	idParam := ctx.Param("id")
 	id, err := strconv.Atoi(idParam)
@@ -148,7 +239,7 @@ func (ah *AppointmentsHandler) UpdateAppointmentByID(ctx *gin.Context) {
 		return
 	}
 
-	if appointmentRequest.Dentist.ID == 0  {
+	if appointmentRequest.Dentist.ID == 0 {
 		appointmentRequest.Dentist.ID = appointment.Dentist.ID
 	}
 	if appointmentRequest.Patient.ID == 0 {
@@ -169,6 +260,25 @@ func (ah *AppointmentsHandler) UpdateAppointmentByID(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, appointment)
 }
 
+// DeleteAppointmentByID godoc
+// @Summary      Deletes an Appointment by id
+// @Description  Deletes an Appointment by id, be careful with this action.
+// @Tags         Appointment
+// @Produce      application/json
+// @Param        PUBLIC-KEY header string true "publicKey"
+// @Param        SECRET_KEY header string true "secretKey"
+// @Param        id path string true "ID"
+// @Param        Appointment body appointments.Appointment true "Delete Appointment"
+// @Success      200 {object} appointments.Appointment
+// @Responses:
+//
+//	200: {object} appointments.Appointment (updated)
+//	400: Either the id passed is in the wrong format or there are missing fields
+//	401: Either The PUBLIC-KEY or the SECRET-KEY or both are not correct
+//	404: The appointment with the given id was not found or the dentist associated or the patient associated
+//	500: Internal error occurred
+//
+// @Router       /appointments/{id} [delete]
 func (ah *AppointmentsHandler) DeleteAppointmentByID(ctx *gin.Context) {
 	idParam := ctx.Param("id")
 	id, err := strconv.Atoi(idParam)
@@ -187,6 +297,6 @@ func (ah *AppointmentsHandler) DeleteAppointmentByID(ctx *gin.Context) {
 		ctx.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
 		return
 	}
-	
+
 	ctx.JSON(http.StatusOK, fmt.Sprintf("appointment with ID: %v deleted", id))
 }
